--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 
                             <h2 style="text-align: left;"><a href="#about-me" class="scrolly">My name is Colin King.</a></h1>
 							<h3 style="text-align: left;">
-								I'm a junior at Rice University pursuing a B.S. in computer science a business minor.
+								I'm a junior at Rice University pursuing a B.S. in computer science and a business minor.
                             </h3>
                             <h3 style="text-align: left;">
 								I'm currently working as a software engineering intern at <a href="https://www.cdkglobal.com" target="_blank">CDK Global</a>.
