editing margin on profile pic

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<div class="inner">
 
 							<header>
-                                <section id="main">
+                                <section id="main" style = "margin-bottom:0px;">
                                     <span class="avatar"><img src="images/Headshot.jpg" /></span>
                             </section>
                                 <p><h1><a href="index.html" id="logo"> <strong>Colin King</strong></a></h1></p>
