--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 <a style="cursor:pointer;" id = modalbtn1 class="modal-image" ><img class="proj-image" style = "max-width: 100%", src ="images/matlab-datathon.PNG" alt="" /></a>
                                 <header><h3>RCE Analytics</h3></header>
                                 <p>
-                                   Analyzing Rice University's Dataset and extracting metrics to guide administrators, professors, and students towards data-driven approaches to college education. <br/>
+                                   Analyzing Rice University's course review dataset and extracting metrics to guide administrators, professors, and students towards data-driven approaches to college education. <br/>
                                 </p>
                                 <!-- The Modal -->
                                 <div id="project_modal" class="modal">
