Adjusting margins for skills

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             
 								<section class="col-4 col-12-mobile">
 									<header style = "margin-top: 0em; margin-bottom: 2em;"> 
-										<h3><span class="label"  >Languages</span></h3>
+										<h3><span class="label"  >Languages  </span></h3>
 									</header>
 									<ul class="divided" >
 										<li>
@@ -477,17 +477,19 @@
 							<div class="col-12">
 
 								<!-- Contact -->
-									<section class="contact">
-										<p><h3>Let's Connect </h3></p>
-										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-										</ul>
-									</section>
+                                    
+                                    <section class="contact">
+                                        <p><h3>Let's Connect </h3></p>
+                                        <ul class="icons">
+                                            <li><a href="https://www.linkedin.com/in/colinbking" target="_blank"" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+                                            <li><a href="https://www.github.com/colinbking" target="_blank"" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                                            <li><a href="https://www.yelp.com/user_details?userid=2fKJeKlPi9le_ta7DPVW_A" target="_blank"" class="icon brands fa-yelp"><span class="label">Yelp</span></a></li>
+                                            <li><a href="https://www.facebook.com/colin.king.90281943" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                                            <li><a href="mailto:cbk1@rice.edu" class="fa fa-envelope fa-lg"><span class="label"></span></a></li>
+
+                                        </ul>
+                                    </section>
+
 
 								<!-- Copyright -->
 									<div class="copyright">
