--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							<header>
 								<h3><a href="https://www.cdkglobal.com/us">CDK Global</a></h3>
 							</header>
-							<p>Cofounder, Backend Developer</p>
+							<p>Software Engineering Intern</p>
                         </article>
 
                         <article>
