--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                             <tr>
                                 <td class="left">Teaching Assistant</td>
                                 <td class="at">@</td>
-                                <td class="right"><a href="http://www.rice.edu" target="_blank">Rice University</a></td>
+                                <td class="right"><a href="https://www.rice.edu" target="_blank">Rice University</a></td>
                             </tr>
                             <tr>
                                 <td class="left">Software Engineering Intern</td>
                                 <td class="at">@</td>
-                                <td class="right"><a href="http://www.rice.edu" target="_blank">Microsoft Azure</a></td>
+                                <td class="right"><a href="https://azure.microsoft.com" target="_blank">Microsoft Azure</a></td>
                             </tr>
                             <tr>
                                 <td class="left">Private Tutor</td>
